@@ -11,6 +11,10 @@
 #' @param scales should Scales be fixed (\code{"fixed"}, the default),
 #'   free (\code{"free"}), or free in one dimension (\code{"free_x"},
 #'   \code{"free_y"}).
+#' @param switch By default, the labels are displayed on the top of
+#'   the plot. If \code{switch} is \code{"x"}, they will be displayed
+#'   to the bottom. If \code{"y"}, they will be displayed to the
+#'   left, near the y axis.
 #' @inheritParams facet_grid
 #' @export
 #' @examples
@@ -53,8 +57,38 @@
 #'   geom_point(data = transform(mpg, class = NULL), colour = "grey85") +
 #'   geom_point() +
 #'   facet_wrap(~class)
-facet_wrap <- function(facets, nrow = NULL, ncol = NULL, scales = "fixed",
-                       shrink = TRUE, as.table = TRUE, drop = TRUE) {
+#'
+#' \dontrun{
+#' # Use `switch` to display the facet labels near an axis, acting as
+#' # a subtitle for this axis. This is typically used with free scales
+#' # and a theme without boxes around strip labels.
+#' library("dplyr")
+#' library("tidyr")
+#' data <- mtcars %>%
+#'   mutate(Logarithmic = log(mpg),
+#'          Inverse = 1/mpg,
+#'          Quadratic = mpg^2,
+#'          Original = mpg) %>%
+#'   gather(mpg_trans, mpg2, Logarithmic:Original)
+#' p <- ggplot(data, aes(mpg, disp)) + geom_point()
+#' 
+#' p + aes(x = mpg2) +
+#'   facet_wrap(~ mpg_trans, ncol = 2, scales = "free", switch = "x") +
+#'   theme() %+replace% theme(strip.background = element_blank())
+#' 
+#' 
+#' data <- data %>%
+#'   mutate(Logarithmic = log(disp),
+#'          Inverse = 1/disp,
+#'          Quadratic = disp^2,
+#'          Original = disp) %>%
+#'   gather(dpg_trans, disp2, Logarithmic:Original)
+#' 
+#' p %+% data + aes(y = disp2) +
+#'   facet_wrap(~ dpg_trans, ncol = 2, scales = "free", switch = "y") +
+#'   theme_minimal()
+#' }
+facet_wrap <- function(facets, nrow = NULL, ncol = NULL, scales = "fixed", shrink = TRUE, as.table = TRUE, switch = NULL, drop = TRUE) {
   scales <- match.arg(scales, c("fixed", "free_x", "free_y", "free"))
   free <- list(
     x = any(scales %in% c("free_x", "free")),
@@ -66,8 +100,8 @@ facet_wrap <- function(facets, nrow = NULL, ncol = NULL, scales = "fixed",
 
   facet(
     facets = as.quoted(facets), free = free, shrink = shrink,
-    as.table = as.table, drop = drop,
-    ncol = ncol, nrow = nrow,
+    as.table = as.table, switch = switch,
+    drop = drop, ncol = ncol, nrow = nrow,
     subclass = "wrap"
   )
 }
@@ -132,10 +166,23 @@ facet_render.wrap <- function(facet, panel, coord, theme, geom_grobs) {
   nrow <- max(layout$ROW)
   n <- nrow(layout)
 
+  # Set switch to default value when misspecified
+  switch_to_x <- FALSE
+  switch_to_y <- FALSE
+  if (!is.null(facet$switch) && facet$switch == "x") {
+    switch_to_x <- TRUE
+  } else if (!is.null(facet$switch) && facet$switch == "y") {
+    switch_to_y <- TRUE
+  } else if (!is.null(facet$switch)) {
+    message("`switch` must be set to 'x', 'y' or NULL")
+    facet$switch <- NULL
+  }
+
   panels <- facet_panels(facet, panel, coord, theme, geom_grobs)
   axes <- facet_axes(facet, panel, coord, theme)
   strips <- facet_strips(facet, panel, theme)
 
+  
   # Should become facet_arrange_grobs
 
   # Locate each element in panel
@@ -145,14 +192,37 @@ facet_render.wrap <- function(facet, panel, coord, theme, geom_grobs) {
     t <- size[2] * (layout$ROW - 1) + loc[2]
     data.frame(t = t, r = l, b = t, l = l, id = seq_len(n))
   }
-  locs <- list(
-    panel =   c(2, 2),
-    strip_t = c(2, 1),
-    axis_l =  c(1, 2),
-    axis_b =  c(2, 3),
-    hspace =  c(2, 4),
-    vspace =  c(3, 2)
-  )
+
+
+  if (switch_to_x) {
+    locs <- list(
+      panel =   c(2, 1),
+      strip_t = c(2, 3),
+      axis_l =  c(1, 1),
+      axis_b =  c(2, 2),
+      hspace =  c(2, 4),
+      vspace =  c(3, 1)
+    )
+  } else if (switch_to_y) {
+    locs <- list(
+      panel =   c(3, 1),
+      strip_t = c(1, 1),
+      axis_l =  c(2, 1),
+      axis_b =  c(3, 2),
+      hspace =  c(3, 3),
+      vspace =  c(4, 1)
+    )
+  } else {
+    locs <- list(
+      panel =   c(2, 2),
+      strip_t = c(2, 1),
+      axis_l =  c(1, 2),
+      axis_b =  c(2, 3),
+      hspace =  c(2, 4),
+      vspace =  c(3, 2)
+    )
+  }
+
   grobs <- list(
     panel = panels,
     strip_t = strips$t,
@@ -160,7 +230,54 @@ facet_render.wrap <- function(facet, panel, coord, theme, geom_grobs) {
     axis_b = axes$b
   )
 
-  info <- ldply(locs, find_pos, layout = layout, size = c(3, 4))
+  # If strips are switched, add padding
+  if (switch_to_x) {
+    padding <- convertUnit(theme$strip.switch.pad.wrap, "cm")
+
+    add_padding <- function(strip) {
+      gt_t <- gtable_row("strip_t", list(strip),
+        height = unit(height_cm(strip), "cm"))
+
+      # One padding above and two below, so that the strip does not look
+      # like a title for the panel just below.
+      gt_t <- gtable_add_rows(gt_t, padding, pos = 0)
+      gt_t <- gtable_add_rows(gt_t, 2 * padding, pos = 2)
+      gt_t
+    }
+    grobs$strip_t <- lapply(strips$t, add_padding)
+    
+    strip_height <- lapply(strips$t, function(x) {
+       3 * as.numeric(padding) + height_cm(x)
+    })
+    strip_width <- NULL
+    size <- c(3, 4)
+
+  } else if (switch_to_y) {
+    padding <- convertUnit(theme$strip.switch.pad.wrap, "cm")
+
+    add_padding <- function(strip) {
+      gt_t <- gtable_col("strip_t", list(strip),
+        heights = unit(aspect_ratio, "null"))
+
+      gt_t <- gtable_add_cols(gt_t, padding, pos = 0)
+      gt_t <- gtable_add_cols(gt_t, padding, pos = 2)
+      gt_t
+    }
+    grobs$strip_t <- lapply(strips$t, add_padding)
+    
+    strip_height <- NULL
+    strip_width <- lapply(strips$t, function(x) {
+      3 * as.numeric(padding) + width_cm(x)
+    })
+    size <- c(4, 3)
+
+  } else {
+    strip_height <- height_cm(grobs$strip_t)
+    strip_width <- NULL
+    size <- c(3, 4)
+  }
+
+  info <- ldply(locs, find_pos, layout = layout, size = size)
   names(info)[1] <- "type"
   info$clip <- ifelse(info$type == "panel", "on", "off")
   info$name <- paste(info$type, info$id, sep = "-")
@@ -169,14 +286,19 @@ facet_render.wrap <- function(facet, panel, coord, theme, geom_grobs) {
   # If not listed, assume is unit(1, "null")
   widths <- list(
     axis_l = width_cm(grobs$axis_l),
+    strip_t = strip_width,
     vspace = ifelse(layout$COL == ncol, 0, width_cm(theme$panel.margin.x %||% theme$panel.margin))
   )
   heights <- list(
     panel = unit(aspect_ratio, "null"),
-    strip_t = height_cm(grobs$strip_t),
+    strip_t = strip_height,
     axis_b = height_cm(grobs$axis_b),
     hspace = ifelse(layout$ROW == nrow, 0, height_cm(theme$panel.margin.y %||% theme$panel.margin))
   )
+
+  # Remove strip_t according to which strips are switched
+  heights <- Filter(Negate(is.null), heights)
+  widths <- Filter(Negate(is.null), widths)
 
   col_widths <- compute_grob_widths(info, widths)
   row_heights <- compute_grob_heights(info, heights)
@@ -187,6 +309,7 @@ facet_render.wrap <- function(facet, panel, coord, theme, geom_grobs) {
   # Keep only the rows in info that refer to grobs
   info  <- info[info$type %in% names(grobs), ]
   grobs <- unlist(grobs, recursive = FALSE)
+
   # Add the grobs
   gt <- gtable_add_grob(gt, grobs, l = info$l, t = info$t, r = info$r,
     b = info$b, name = info$name, clip = info$clip)
@@ -219,9 +342,14 @@ facet_strips.wrap <- function(facet, panel, theme) {
   labels_df <- panel$layout[names(facet$facets)]
   labels_df[] <- llply(labels_df, format, justify = "none")
 
-  labels <- apply(labels_df, 1, paste, collapse=", ")
+  labels <- apply(labels_df, 1, paste, collapse = ", ")
 
-  list(t = llply(labels, ggstrip, theme = theme))
+  vertical <- !is.null(facet$switch) && facet$switch == "y"
+  if (vertical) {
+    theme$strip.text.y$angle <- adjust_angle(theme$strip.text.y$angle)
+  }
+
+  list(t = llply(labels, ggstrip, theme = theme, horizontal = !vertical))
 }
 
 #' @export
