@@ -152,6 +152,10 @@ The individual theme elements are:
                    (\code{element_text}; inherits from \code{strip.text}) \cr
   strip.text.y     \tab facet labels along vertical direction
                    (\code{element_text}; inherits from \code{strip.text}) \cr
+  strip.switch.pad.grid \tab space between strips and axes when strips are switched
+                   (\code{unit}) \cr
+  strip.switch.pad.wrap \tab space between strips and axes when strips are switched
+                   (\code{unit}) \cr
 }
 }
 \examples{
